main: update tests
